# dub-rs

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.common.yml  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-0cb40fcef35d74816655e630ebef48ace63d1fea04cd773059990e4401914f65.json  query-163ddb154aa3c0b66f41540dfb748360b397c2aef9544f497b0d6398d9d7fd29.json  query-205100ee0654d325dcb062c88b06d68ab4d1b94983d97c1e46624941cf6d21f0.json  query-4222a7255b20be605e17c29cccea280c66ebd2eedf79bc4a76888d59bb829c1a.json  query-7cd91d09853cdadd1ac69a80d15452de0d54675352f6f918247bd057796857f9.json  query-844d0308ca5ebf80400d953cad125c0c4fdf71b2bf0f2f2ba58920cc212d1b34.json  query-89401bc57fc5da07a3bef7172e24be89ebbaa1cf23b367fb403aeb51c951f720.json  query-8ddc4478d4b425783ad298358d8ad03c6bdd66d3afbfca5e4fbfa8a6df27b075.json  query-b3069d426e13d7848f47ecd5d06d950253c0a9dd9bf18afe15771d6d53ab390b.json  query-b9885b22fe732d93e2f11971739b352b1e59ba084e6d0052090259d6e38128a3.json  query-bbf0123877294ef86bcb641a5e0760f47fe18a09bd22b06ebb5062f9287766e2.json  query-c4294abb067a9708d25f454dbc43b58e37a7b53cded2f03dbab24ce2ac56cb92.json  query-d816491bbf2d62ed5ff4b806c7c4117abd6f87e7b00125d59370f046d1d188f1.json  query-f4972e76a9f90bb38612c143bf28016177b2b94bc991206e2378307d8d5d1328.json  query-f58fc34fb23b51bb2e467586bb12df3a454fb5800dea4a5805e25e6dd0532ecd.json  query-f799e21383bf2ca16adb201d3b172b75f7f921ed94353179be0d5a2dd32ee16c.json  query-f892a463c57726396b7ce4c3171ffdf3f74c9c5c9fcde7926038f175aade3acf.json  query-fa048813141c3651cf3bdec378443c9614b79299ac42511107955f1ba6ec8f11.json
scripts/: docker.env  prepare.sh
scripts/sql/: lisek-schema.sql
src/: config.rs  context.rs  main.rs
(+48 files in other folders)
