[package]
name = "dub-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart", "form", "macros"], default-features = true }
bcrypt = { version = "0.15.0", features = ["alloc"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
lazy_static = "1.4.0"
lru = "0.12.1"
redis = "0.25.3"
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_repr = "0.1"
string-builder = "0.2.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
bancho-packets = "5.3.1"
webhook = "2.1.2"
reqwest = { version = "0.12.3", features = ["json"] }
akatsuki-pp = { git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", version = "*" }
serde_json = "1.0.113"
serde_qs = "0.13.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
md5 = "0.7.0"
base64 = "0.22.0"
rand = "0.8.5"
regex = "1.10.3"
axum-macros = "0.4.1"
axum_typed_multipart = "0.11.0"
simple-rijndael = "0.3.2"
tokio-util = "0.7.10"
dotenvy = "0.15.7"
sysinfo = "0.30.10"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1

[build-dependencies]
iced-x86 = { version = "1.17", default-features = false, features = ["std", "decoder"] }
